// ============================================================================
// /supplychain/inventory-management-service
// 描述: 提供完整的库存管理功能，包括库存查询、库存移动、批次管理、序列号管理、
//       物理盘点、库存预留、库存评估等。
//       字段设计深度参考核心ERP的：
//       MKPF (物料凭证抬头), MSEG (物料凭证段), MARD (工厂/存储地点库存),
//       MCHB (批次库存), MCHA (批次主数据), MARC (工厂物料数据),
//       MSKA (销售订单库存), MBEW (物料评估), NSDM_V_MSEG (扩展物料凭证)
// ============================================================================

syntax = "proto3";

package sc.im.v1;


import "google/protobuf/timestamp.proto";
import "common/common.proto";
import "google/api/annotations.proto";

// ============================================================================
// 服务定义: InventoryManagementService
// ============================================================================

service InventoryManagementService {
  // --------------------------------------------------------------------------
  // 库存查询 (Stock Query)
  // --------------------------------------------------------------------------

  // 获取物料在不同存储地点的库存概览
  rpc GetStockOverview(GetStockOverviewRequest) returns (GetStockOverviewResponse) {


    option (google.api.http) = {


      get: "/api/v1/supplychain/stock-overview"


    };


  }

  // 流式获取库存列表 (Streaming) (New)
  rpc StreamStockList(ListStockRequest) returns (stream StockItem) {


    option (google.api.http) = {


      get: "/api/v1/supplychain/stock"


    };


  }

  // 库存可用性检查 (ATP)
  rpc CheckStockAvailability(CheckStockAvailabilityRequest) returns (StockAvailabilityResponse) {


    option (google.api.http) = {


      post: "/api/v1/supplychain/stock-availability/check"


      body: "*"


    };


  }

  // --------------------------------------------------------------------------
  // 库存移动 (Stock Movement)
  // --------------------------------------------------------------------------

  // 执行库存移动
  rpc PostStockMovement(PostStockMovementRequest) returns (common.v1.StockMovementResponse) {


    option (google.api.http) = {


      post: "/api/v1/supplychain/stock-movement/post"


      body: "*"


    };


  }

  // 冲销物料凭证
  rpc ReverseMaterialDocument(ReverseMaterialDocumentRequest) returns (common.v1.StockMovementResponse) {


    option (google.api.http) = {


      post: "/api/v1/supplychain/material-document/reverse"


      body: "*"


    };


  }

  // --------------------------------------------------------------------------
  // 库存预留 (Stock Reservation)
  // --------------------------------------------------------------------------

  // 创建库存预留
  rpc CreateReservation(CreateReservationRequest) returns (ReservationResponse) {


    option (google.api.http) = {


      post: "/api/v1/supplychain/reservation"


      body: "*"


    };


  }

  // 取消库存预留 (New)
  rpc CancelReservation(CancelReservationRequest) returns (ReservationResponse) {


    option (google.api.http) = {


      post: "/api/v1/supplychain/reservation/cancel"


      body: "*"


    };


  }

  // --------------------------------------------------------------------------
  // 物理盘点 (Physical Inventory)
  // --------------------------------------------------------------------------

  // 创建盘点凭证
  rpc CreatePhysicalInventoryDocument(CreatePIDocumentRequest) returns (PIDocumentResponse) {


    option (google.api.http) = {


      post: "/api/v1/supplychain/physical-inventory-document"


      body: "*"


    };


  }
  
  // 输入盘点数量
  rpc EnterInventoryCount(EnterInventoryCountRequest) returns (EnterInventoryCountResponse) {

  
    option (google.api.http) = {

  
      post: "/api/v1/supplychain/inventory-count/enter"

  
      body: "*"

  
    };

  
  }
  
  // 过账盘点差异
  rpc PostInventoryDifference(PostInventoryDifferenceRequest) returns (common.v1.StockMovementResponse) {

  
    option (google.api.http) = {

  
      post: "/api/v1/supplychain/inventory-difference/post"

  
      body: "*"

  
    };

  
  }
}

// ============================================================================
// 数据结构与消息定义
// ============================================================================

// --- Stock Query ---

message GetStockOverviewRequest {
  string material = 1;
  string plant = 2;
  repeated string storage_locations = 3;
  bool show_zero_stock = 4;
  common.v1.PaginationRequest pagination = 98;
  common.v1.RequestContext context = 99;
}

message GetStockOverviewResponse {
  repeated StockOverviewItem items = 1;
  common.v1.PaginationResponse pagination = 2;
}

message StockOverviewItem {
  string material = 1;
  string plant = 2;
  string storage_location = 3;
  string batch = 4;
  common.v1.QuantityValue unrestricted_stock = 5;
  common.v1.QuantityValue quality_inspection_stock = 6;
  common.v1.QuantityValue blocked_stock = 7;
}

message ListStockRequest {
  string plant = 1;
  string storage_location = 2;
  repeated string material_group_filter = 3;
  common.v1.RequestContext context = 99;
}

message StockItem {
  string material = 1;
  string description = 2;
  string plant = 3;
  string storage_location = 4;
  common.v1.QuantityValue quantity = 5;
  string stock_type = 6;
}

message CheckStockAvailabilityRequest {
  string material = 1;
  string plant = 2;
  common.v1.QuantityValue required_quantity = 3;
  google.protobuf.Timestamp checking_date = 4;
  common.v1.RequestContext context = 99;
}

message StockAvailabilityResponse {
  bool is_available = 1;
  common.v1.QuantityValue available_quantity = 2;
  google.protobuf.Timestamp earliest_availability_date = 3;
}

// --- Stock Movement ---

message PostStockMovementRequest {
  common.v1.StockMovementHeader header = 1;
  repeated common.v1.StockMovementItem items = 2;
  common.v1.RequestContext context = 99;
}

message ReverseMaterialDocumentRequest {
  string material_document_number = 1;
  int32 fiscal_year = 2;
  string reversal_reason = 3;
  google.protobuf.Timestamp posting_date = 4;
  common.v1.RequestContext context = 99;
}

// --- Stock Reservation ---

message CreateReservationRequest {
  string plant = 1;
  google.protobuf.Timestamp requirement_date = 2;
  common.v1.MovementType movement_type = 3;
  repeated ReservationItem items = 4;
  common.v1.RequestContext context = 99;
}

message ReservationItem {
  string material = 1;
  common.v1.QuantityValue quantity = 2;
  string storage_location = 3;
  string cost_center = 4;
}

message ReservationResponse {
  bool success = 1;
  string reservation_number = 2;
  repeated common.v1.ApiMessage messages = 3;
}

message CancelReservationRequest {
  string reservation_number = 1;
  common.v1.RequestContext context = 99;
}

// --- Physical Inventory ---

message CreatePIDocumentRequest {
  string plant = 1;
  string storage_location = 2;
  google.protobuf.Timestamp planned_count_date = 3;
  // 特殊库存标识
  string special_stock_indicator = 4;
  common.v1.RequestContext context = 99;
}

message PIDocumentResponse {
  bool success = 1;
  string physical_inventory_document = 2;
  repeated common.v1.ApiMessage messages = 3;
}

message EnterInventoryCountRequest {
  string physical_inventory_document = 1;
  int32 fiscal_year = 2;
  repeated CountItem items = 3;
  common.v1.RequestContext context = 99;
}

message CountItem {
  int32 item_number = 1;
  common.v1.QuantityValue counted_quantity = 2;
  bool zero_count = 3;
}

message EnterInventoryCountResponse {
  bool success = 1;
  repeated common.v1.ApiMessage messages = 2;
}

message PostInventoryDifferenceRequest {
  string physical_inventory_document = 1;
  int32 fiscal_year = 2;
  google.protobuf.Timestamp posting_date = 3;
  string reason = 4;
  common.v1.RequestContext context = 99;
}
